app/assets/stylesheets/designs.css.scss
.design-row{
  margin-top: 30px;
  margin-bottom: 30px
}
.section {
  margin-top: 55px;
  margin-bottom: 55px;
}

#designs-page{
  margin-left: 10%;
  margin-right: 10%;
}
#yhwh-row {
  padding-left: 0px;
}
#mountain-img {
  width: 100%;
  max-width:200px;
}
#yhwh-img {
 width: 90%;
 max-width:200px;
}

